{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 139,
  "lineage": "d9935a1e-7b76-bfca-2b40-aebe5eb1870f",
  "resources": [
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_eip",
      "name": "myeip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0064ef850d94140c6",
            "domain": "vpc",
            "id": "eipalloc-0064ef850d94140c6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-236-84-92.compute-1.amazonaws.com",
            "public_ip": "54.236.84.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "myeip"
            },
            "tags_all": {
              "Name": "myeip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:internet-gateway/igw-0d956e3d172ac66a8",
            "id": "igw-0d956e3d172ac66a8",
            "owner_id": "243324621241",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-09fd9544345056637"
          },
          "dependencies": [
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mygw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0064ef850d94140c6",
            "connectivity_type": "public",
            "id": "nat-05581268130958c7f",
            "network_interface_id": "eni-01aabef3958aaaa83",
            "private_ip": "10.0.1.212",
            "public_ip": "54.236.84.92",
            "subnet_id": "subnet-0e0e282bdad2f1257"
          },
          "dependencies": [
            "module.mymdul.aws_eip.myeip",
            "module.mymdul.aws_subnet.public1",
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe597f0d5803941e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05581268130958c7f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe597f0d5803941e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymdul.aws_eip.myeip",
            "module.mymdul.aws_nat_gateway.mygw",
            "module.mymdul.aws_route_table.private",
            "module.mymdul.aws_subnet.public1",
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d956e3d172ac66a8",
            "id": "r-rtb-0a098c1c9ea148e9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a098c1c9ea148e9c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymdul.aws_internet_gateway.myigw",
            "module.mymdul.aws_route_table.public",
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:route-table/rtb-0fe597f0d5803941e",
            "id": "rtb-0fe597f0d5803941e",
            "owner_id": "243324621241",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fd9544345056637"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:route-table/rtb-0a098c1c9ea148e9c",
            "id": "rtb-0a098c1c9ea148e9c",
            "owner_id": "243324621241",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09fd9544345056637"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec90d78c4c438248",
            "route_table_id": "rtb-0fe597f0d5803941e",
            "subnet_id": "subnet-04300f59fe29efcd0"
          },
          "dependencies": [
            "module.mymdul.aws_route_table.private",
            "module.mymdul.aws_subnet.private1",
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f2a538159f93a30",
            "route_table_id": "rtb-0fe597f0d5803941e",
            "subnet_id": "subnet-05f94204512eae276"
          },
          "dependencies": [
            "module.mymdul.aws_route_table.private",
            "module.mymdul.aws_subnet.private2",
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b73a112e4975895c",
            "route_table_id": "rtb-0a098c1c9ea148e9c",
            "subnet_id": "subnet-0e0e282bdad2f1257"
          },
          "dependencies": [
            "module.mymdul.aws_route_table.public",
            "module.mymdul.aws_subnet.public1",
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a08f82916685501",
            "route_table_id": "rtb-0a098c1c9ea148e9c",
            "subnet_id": "subnet-07ef12c3be64f0543"
          },
          "dependencies": [
            "module.mymdul.aws_route_table.public",
            "module.mymdul.aws_subnet.public2",
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:subnet/subnet-04300f59fe29efcd0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04300f59fe29efcd0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243324621241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-09fd9544345056637"
          },
          "dependencies": [
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:subnet/subnet-05f94204512eae276",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f94204512eae276",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243324621241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-09fd9544345056637"
          },
          "dependencies": [
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:subnet/subnet-0e0e282bdad2f1257",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0e282bdad2f1257",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243324621241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-09fd9544345056637"
          },
          "dependencies": [
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:subnet/subnet-07ef12c3be64f0543",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ef12c3be64f0543",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243324621241",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-09fd9544345056637"
          },
          "dependencies": [
            "module.mymdul.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.mymdul",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:243324621241:vpc/vpc-09fd9544345056637",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04932ff7b09ce4317",
            "default_route_table_id": "rtb-0762ad02df4af041b",
            "default_security_group_id": "sg-0b9f3705b0270275a",
            "dhcp_options_id": "dopt-023db81bc53c74dab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09fd9544345056637",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0762ad02df4af041b",
            "owner_id": "243324621241",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}